# ndpyramid

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codspeed.yml  main.yaml  pypi-release.yaml
ci/: doc.yml  environment.yml
docs/: api.rst  conf.py  extent-aware.rst  gallery.rst  gallery.yml  generate-pyramids.md  index.rst  install.md  quick-start.md  schema.md
docs/examples/: geotiff.ipynb  pyramid-create.ipynb  pyramid-regrid.ipynb  pyramid-reproject.ipynb  pyramid-resample.ipynb
ndpyramid/: __init__.py  _version.py  coarsen.py  common.py  core.py  create.py  layout.py  regrid.py  reproject.py  resample.py  testing.py  utils.py
notebooks/: demo-regrid.ipynb  demo-reproject.ipynb  demo-resample.ipynb  demo.ipynb  environment.yml  single_level.ipynb  single_level.py  utils.py
tests/: conftest.py  test_pyramid_regrid.py  test_pyramid_resample.py  test_pyramids.py  test_single_level.py  test_sparse_levels.py  test_utils.py
